# big_complex

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README-zh.md  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-05-gaussian-integer-refactor.md
examples/: usage.rs
src/: big_complex.rs  big_int.rs  gauss_int.rs  lib.rs  main.rs  number_theory.rs
tests/: integration_tests.rs
