[package]
name = "gauss_int"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gaussian integer arithmetic and number theory utilities"
repository = "https://github.com/AlanKSorata/big_complex"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]
proptest = "1.0"
rand = "0.8"