[package]
name = "gauss_int"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gaussian integer arithmetic and number theory utilities"
repository = "https://github.com/AlanKSorata/big_complex"
keywords = ["gaussian-integer", "complex-numbers", "number-theory", "primality-test", "bigint"]
categories = ["algorithms", "mathematics", "science"]

[[bin]]
name = "gauss"
path = "src/main.rs"

[lib]
name = "gauss_int"
path = "src/lib.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"
rand = "0.8"